// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericAssessment editor plugins.renderNode calls next 1`] = `undefined`;

exports[`NumericAssessment editor plugins.renderNode renders a ObojoboDraft.Chunks.NumericAssessment when passed 1`] = `
<NumericAssessment
  attributes={
    Object {
      "dummy": "some_attributes",
    }
  }
  dummy="some_attributes"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.NumericAssessment",
    }
  }
/>
`;

exports[`NumericAssessment editor plugins.renderNode renders a ObojoboDraft.Chunks.NumericAssessment.NumericAsnwer when passed 1`] = `
<NumericInput
  attributes={
    Object {
      "dummy": "some_attributes",
    }
  }
  dummy="some_attributes"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.NumericAssessment.NumericAsnwer",
    }
  }
/>
`;

exports[`NumericAssessment editor plugins.renderNode renders a ObojoboDraft.Chunks.NumericAssessment.NumericChoice when passed 1`] = `
<NumericInput
  attributes={
    Object {
      "dummy": "some_attributes",
    }
  }
  dummy="some_attributes"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.NumericAssessment.NumericChoice",
    }
  }
/>
`;
